Add service details funcionality

--- a/client/app.scss
+++ b/client/app.scss
@@ -43,3 +43,4 @@ html,body {
 @import "./imports/hashtag-autocomplete/hashtag-autocomplete";
 @import "./imports/services-list/services-list";
 @import "./imports/services-form/services-form";
+@import "./imports/service-details/service-details";
